crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_12.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: RedefinedWhileUnused
    body: "Redefinition of unused `mixer` from line 2"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 19
  end_location:
    row: 6
    column: 24
  fix: ~
  parent: ~

