crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_15.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: RedefinedWhileUnused
      body: "Redefinition of unused `fu` from line 1"
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 4
    end_location:
      row: 4
      column: 6
    fix: ~
    parent: ~

