crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_16.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: RedefinedWhileUnused
      body: "Redefinition of unused `fu` from line 3"
      suggestion: ~
      fixable: false
    location:
      row: 8
      column: 12
    end_location:
      row: 8
      column: 14
    fix: ~
    parent: ~

