crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_17.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: RedefinedWhileUnused
    body: "Redefinition of unused `fu` from line 2"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 11
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~
- kind:
    name: RedefinedWhileUnused
    body: "Redefinition of unused `fu` from line 6"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 12
  end_location:
    row: 9
    column: 14
  fix: ~
  parent: ~

