crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_2.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: RedefinedWhileUnused
    body: "Redefinition of unused `FU` from line 1"
    commit: ~
    fixable: false
  location:
    row: 1
    column: 26
  end_location:
    row: 1
    column: 35
  fix: ~
  parent: ~

