crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_21.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: RedefinedWhileUnused
      body: "Redefinition of unused `Sequence` from line 26"
      suggestion: ~
      fixable: false
    location:
      row: 32
      column: 4
    end_location:
      row: 32
      column: 12
    fix: ~
    parent:
      row: 30
      column: 0

