crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_26.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
F811_26.py:5:9: F811 Redefinition of unused `func` from line 2
  |
3 |         pass
4 | 
5 |     def func(self):
  |         ^^^^ F811
6 |         pass
  |


