crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_3.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: RedefinedWhileUnused
      body: "Redefinition of unused `fu` from line 1"
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 11
    end_location:
      row: 1
      column: 13
    fix: ~
    parent: ~

