crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_5.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: RedefinedWhileUnused
    body: "Redefinition of unused `fu` from line 1"
    commit: ~
    fixable: false
  location:
    row: 1
    column: 12
  end_location:
    row: 1
    column: 14
  fix: ~
  parent: ~

