crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_6.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: RedefinedWhileUnused
    body: "Redefinition of unused `os` from line 5"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 11
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~

